kubernetes-manifests/gateway/route-frontend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: hipster
  name: frontend-route
  
  labels:
    app: frontend
spec:
  parentRefs:
    - name: hipstershop-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /static/
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /resources/
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /architecture
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: Exact
            value: /_healthz
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /product
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /cart
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: Exact
            value: /setCurrency
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: Exact
            value: /login
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: Exact
            value: /signup
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: Exact
            value: /logout
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: Exact
            value: /
      backendRefs:
        - name: frontend
          port: 80
